added validators
