# utils/validator.js
@@ -1,0 +1,28 @@
+const { body, validationResult } = require("express-validator");
+
+const userValidationRules = () => {
+  return [
+    // username must be an email
+    body("email", "Please include a valid email").isEmail(),
+    // password must be at least 5 chars long
+    body("password", "Password must be 6 or more characters").isLength({ min: 6 })
+  ];
+};
+
+const validate = (req, res, next) => {
+  const errors = validationResult(req);
+  if (errors.isEmpty()) {
+    return next();
+  }
+  const extractedErrors = [];
+  errors.array().map((err) => extractedErrors.push({ [err.param]: err.msg }));
+
+  return res.status(422).json({
+    errors: extractedErrors
+  });
+};
+
+module.exports = {
+  userValidationRules,
+  validate
+};
